# cncn

./: .gitignore  README.md  event_types.hpp  font.hpp  gameapp.hpp  gamemixer.hpp  interface.hpp  loader.hpp  luaruntime.hpp  main.cpp  menus.hpp  novel_dumper.cpp  pool.hpp  quick_save.ccsave  screen.hpp  settings.cpp  sprite.hpp  textbox.cpp  textbox.hpp  utils.hpp  vars.hpp
android/: CMakeLists.txt
android/app/: build.gradle
android/app/jni/src/: CMakeLists.txt
project1/: script.txt
web_generator/: README.md  ccnvl_constructor.py  commands.js  generator.html
